# doobie

./: .gitignore  BRANDING.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
packaging/macos/: README.md  bootstrap-signing.sh  build-pkg.sh  distribution.xml  entitlements.plist  setup-secrets.sh  welcome.txt
src/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ConvolutionReverb.h  DcBlocker.h  DelayLine.h  Diffuser.h  DubDelayEngine.cpp  DubDelayEngine.h  EnvelopeFollower.h  FactoryIRs.cpp  FactoryIRs.h  FdnReverb.cpp  FdnReverb.h  FftPitchShifter.cpp  FftPitchShifter.h  GatedReverb.h  Lfo.h  ModMatrix.h  OctaveShifter.h  PlateReverb.cpp  PlateReverb.h  Saturation.h  ShimmerReverb.cpp  ShimmerReverb.h  SpringReverb.cpp  SpringReverb.h  TapeAge.h  ToneStack.h  WowFlutter.h
src/presets/: PresetManager.cpp  PresetManager.h
src/ui/: EchoVisualiser.cpp  EchoVisualiser.h  LookAndFeel.cpp  LookAndFeel.h  ModMatrixPopup.h  ModSourceMeter.h  ReverbResponseView.cpp  ReverbResponseView.h  SpringTankView.cpp  SpringTankView.h  VectorCassette.h  VuMeter.cpp  VuMeter.h  WebEditor.cpp  WebEditor.h
tests/: CMakeLists.txt  test_dsp.cpp  test_state.cpp
tools/: Snapshot.cpp
ui/src/: app.jsx  doobie.css  index.html  juce-bridge.jsx  knob.jsx  mounts.jsx  panels.jsx  tape.js  viz.jsx
